# bcp-mapf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
bcp/: BranchingRule.cpp  BranchingRule.h  BranchingRule_Fractional.cpp  ConstraintHandler_EdgeConflicts.cpp  ConstraintHandler_EdgeConflicts.h  ConstraintHandler_VertexConflicts.cpp  ConstraintHandler_VertexConflicts.h  Constraint_LengthBranching.cpp  Constraint_LengthBranching.h  Constraint_VertexBranching.cpp  Constraint_VertexBranching.h  Constraint_WaitBranching.cpp  Constraint_WaitBranching.h  Coordinates.h  Debug.h  Heuristic_EECBS.cpp  Heuristic_EECBS.h  Heuristic_LNS2.cpp  Heuristic_LNS2.h  Heuristic_LNS2Init.cpp  Heuristic_LNS2Init.h  Heuristic_LNS2Repair.cpp  Heuristic_LNS2Repair.h  Heuristic_PrioritizedPlanning.cpp  Heuristic_PrioritizedPlanning.h  Includes.h  Main.cpp  Output.cpp  Output.h  Pricer_TruffleHog.cpp  Pricer_TruffleHog.h  ProblemData.cpp  ProblemData.h  Reader.cpp  Reader.h  Separator.h  Separator_AgentWaitEdgeConflicts.cpp  Separator_AgentWaitEdgeConflicts.h  Separator_CliqueConflicts.cpp  Separator_CliqueConflicts.h  (+43 more)
bcp/branching/: branching_rule.cpp  branching_rule.h  fractional.cpp  length_branching_constraint.cpp  length_branching_constraint.h  pseudosolution.cpp  vertex_branching_constraint.cpp  vertex_branching_constraint.h  wait_branching_constraint.cpp  wait_branching_constraint.h
bcp/constraints/: agent_wait_edge.cpp  agent_wait_edge.h  corridor.cpp  corridor.h  edgetime.cpp  edgetime.h  exit_entry.cpp  exit_entry.h  five_edge.cpp  five_edge.h  four_edge.cpp  four_edge.h  nodetime.cpp  nodetime.h  preprocessing.cpp  preprocessing.h  rectangle.cpp  rectangle.h  rectangle_knapsack.cpp  rectangle_knapsack.h  separator.h  six_edge.cpp  six_edge.h  step_aside.cpp  step_aside.h  target.cpp  target.h  three_vertex.cpp  three_vertex.h  two_edge.cpp  two_edge.h  two_vertex.cpp  two_vertex.h  vertex_four_edge.cpp  vertex_four_edge.h  wait_delay.cpp  wait_delay.h
bcp/heuristics/: prioritized_planning.cpp  prioritized_planning.h
bcp/output/: formatting.cpp  formatting.h
bcp/pricing/: agents_data.h  astar.cpp  astar.h  coordinates.h  distance_heuristic.cpp  distance_heuristic.h  edgetime_penalties.h  finish_time_penalties.h  memory_pool.cpp  memory_pool.h  node_crossing_penalties.h  penalties.h  pricer.cpp  pricer.h  priority_queue.h  reservation_table.h
bcp/problem/: debug.h  includes.h  instance.cpp  instance.h  map.cpp  map.h  output.cpp  output.h  problem.cpp  problem.h  reader.cpp  reader.h  scip.h  variable_data.cpp  variable_data.h
bcp/types/: array.h  basic_types.h  bitset.h  file_system.h  float_compare.h  hash_map.h  map_types.h  matrix.h  memory_pool.cpp  memory_pool.h  pointers.h  priority_queue.h  tracy.h  tuple.h  vector.h
cliquer-1.21/: ChangeLog  Makefile  cl.c  cliquer.c  graph.c  reorder.c  set.h  testcase-large-exact8.h  testcase-large-over8.h  testcase-large-w-60-64-mxml.h  testcase-large-w-over60.h  testcase-large-w.b  testcase-large.b  testcases.c
instances/custom/: small-corridor-5x5-2-agents.scen  small-corridor-5x5.map  small-corridor-5x7-3-agents.scen  small-corridor-5x7.map
instances/movingai_2018/: README.txt
instances/movingai_2018/10obs-20x20map/: 10obs-20x20.map  10obs-20x20map-15agents-0.scen  10obs-20x20map-15agents-1.scen  10obs-20x20map-15agents-10.scen  10obs-20x20map-15agents-11.scen  10obs-20x20map-15agents-12.scen  10obs-20x20map-15agents-13.scen  10obs-20x20map-15agents-14.scen  10obs-20x20map-15agents-15.scen  10obs-20x20map-15agents-16.scen  10obs-20x20map-15agents-17.scen  10obs-20x20map-15agents-18.scen  10obs-20x20map-15agents-19.scen  10obs-20x20map-15agents-2.scen  10obs-20x20map-15agents-20.scen  (+436 more)
instances/movingai_2019/: room-64-64-16-even-1.scen  room-64-64-16-even-10.scen  room-64-64-16-even-11.scen  room-64-64-16-even-12.scen  room-64-64-16-even-13.scen  room-64-64-16-even-14.scen  room-64-64-16-even-15.scen  room-64-64-16-even-16.scen  room-64-64-16-even-17.scen  room-64-64-16-even-18.scen  room-64-64-16-even-19.scen  room-64-64-16-even-2.scen  room-64-64-16-even-20.scen  room-64-64-16-even-21.scen  room-64-64-16-even-22.scen  room-64-64-16-even-23.scen  room-64-64-16-even-24.scen  room-64-64-16-even-25.scen  room-64-64-16-even-3.scen  room-64-64-16-even-4.scen  room-64-64-16-even-5.scen  room-64-64-16-even-6.scen  room-64-64-16-even-7.scen  room-64-64-16-even-8.scen  room-64-64-16-even-9.scen  room-64-64-16-random-1.scen  room-64-64-16-random-10.scen  room-64-64-16-random-11.scen  room-64-64-16-random-12.scen  room-64-64-16-random-13.scen  room-64-64-16-random-14.scen  room-64-64-16-random-15.scen  room-64-64-16-random-16.scen  room-64-64-16-random-17.scen  room-64-64-16-random-18.scen  room-64-64-16-random-19.scen  room-64-64-16-random-2.scen  room-64-64-16-random-20.scen  room-64-64-16-random-21.scen  room-64-64-16-random-22.scen  (+10 more)
instances/warehouse_extended/: 10x30-w5-0.scen  10x30-w5-1.scen  10x30-w5-10.scen  10x30-w5-11.scen  10x30-w5-12.scen  10x30-w5-13.scen  10x30-w5-14.scen  10x30-w5-15.scen  10x30-w5-16.scen  10x30-w5-17.scen  10x30-w5-18.scen  10x30-w5-19.scen  10x30-w5-2.scen  10x30-w5-20.scen  10x30-w5-21.scen  10x30-w5-22.scen  10x30-w5-23.scen  10x30-w5-24.scen  10x30-w5-25.scen  10x30-w5-26.scen  10x30-w5-27.scen  10x30-w5-28.scen  10x30-w5-29.scen  10x30-w5-3.scen  10x30-w5-30.scen  10x30-w5-31.scen  10x30-w5-32.scen  10x30-w5-33.scen  10x30-w5-34.scen  10x30-w5-35.scen  10x30-w5-36.scen  10x30-w5-37.scen  10x30-w5-38.scen  10x30-w5-39.scen  10x30-w5-4.scen  10x30-w5-40.scen  10x30-w5-41.scen  10x30-w5-42.scen  10x30-w5-43.scen  10x30-w5-44.scen  (+62 more)
trufflehog/: AStar.cpp  AStar.h  AbstractPathfinder.cpp  AbstractPathfinder.h  AgentsData.h  CMakeLists.txt  Coordinates.h  Crossings.h  Debug.h  EdgePenalties.h  Heuristic.cpp  Heuristic.h  Includes.h  Instance.cpp  Instance.h  LabelPool.cpp  LabelPool.h  Main.cpp  Map.h  PriorityQueue.h  ReservationTable.cpp  ReservationTable.h  SIPPIntervals.cpp  SIPPIntervals.h  main.cpp
trufflehog/Old/: AStar.cpp  EdgeCosts.cpp  EdgeCosts.h
(+2314 files in other folders)
